--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -345,7 +345,111 @@
                                 <div class="s2p5"></div>
                             </div>
                             <div class="section3">
-                                <div class="section3Wrapper">123</div>
+                                <div class="section3Wrapper">
+                                    <div class="s3p1">合作方式流程图</div>
+                                    <div class="s3p2">
+                                        <div class="title">
+                                            <span class="tipIcon"></span>
+                                            <span class="tipInfo">橡树云</span>
+                                        </div>
+                                        <div class="content">
+                                            <div class="contentWrapper">
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/01拷贝@3x.png" alt="" /></span>
+                                                    <span>开通橡树云账号</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/02拷贝@3x.png" alt="" /></span>
+                                                    <span>开通接入点</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/03拷贝@3x.png" alt="" /></span>
+                                                    <span>开通业务</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/04拷贝@3x.png" alt="" /></span>
+                                                    <span>自助式软件定制</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/05拷贝@3x.png" alt="" /></span>
+                                                    <span>平台上线</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="s3p3">
+                                        <div class="title">
+                                            <span class="tipIcon"></span>
+                                            <span class="tipInfo">私有部署</span>
+                                        </div>
+                                        <div class="content">
+                                            <div class="contentWrapper">
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/01拷贝@3x.png" alt="" /></span>
+                                                    <span>确定需求</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/02拷贝@3x.png" alt="" /></span>
+                                                    <span>获取报价</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/03拷贝@3x.png" alt="" /></span>
+                                                    <span>采购服务器</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/04拷贝@3x.png" alt="" /></span>
+                                                    <span>软件定制</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/05拷贝@3x.png" alt="" /></span>
+                                                    <span>安装平台</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/06拷贝@3x.png" alt="" /></span>
+                                                    <span>测试</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/step拷贝5@3x.png" alt="" /></span>
+                                                    <span>平台上线</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="s3p4">
+                                        <div class="title">
+                                            <span class="tipIcon"></span>
+                                            <span class="tipInfo">代理</span>
+                                        </div>
+                                        <div class="content">
+                                            <div class="contentWrapper">
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/01拷贝@3x.png" alt="" /></span>
+                                                    <span class="extra">在线提交申请</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/02拷贝@3x.png" alt="" /></span>
+                                                    <span>公司审核</span>
+                                                </div>
+                                                <span class="rightArrow"><img src="img/右(1)拷贝3@3x.png" alt="" /></span>
+                                                <div class="item">
+                                                    <span class="numIcon"><img src="img/03拷贝@3x.png" alt="" /></span>
+                                                    <span>签订合作协议</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="section4">
                                 <div>
