--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -477,7 +477,79 @@
                                 <span>汽车充电-合作方式</span>
                             </div>
                             <div class="section2">
-                                <div class="section2Wrapper">1</div>
+                                <div class="section2Wrapper">
+                                    <div class="s2p1">
+                                        <div>对比图</div>
+                                        <ul>
+                                            <li>
+                                                <img src="img/云服务器(2)@3x.png" alt="" />
+                                                <span>橡树云</span>
+                                            </li>
+                                            <li>
+                                                <img src="img/矢量智能对象@3x.png" alt="" />
+                                                <span>私有部署</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="s2p2">
+                                        <ul>
+                                            <li>
+                                                <div>
+                                                    <img src="img/勾(2)@3x.png" alt="" />
+                                                    <span>自行采购服务器</span>
+                                                    <img src="img/服务器(1)拷贝@3x.png" alt="" />
+                                                    <span>自行采购服务器</span>
+                                                    <img src="img/错@3x.png" alt="" />
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div>
+                                                    <img src="img/勾(2)@3x.png" alt="" />
+                                                    <span>按量收费</span>
+                                                    <img src="img/总量拷贝@3x.png" alt="" />
+                                                    <span>按量收费</span>
+                                                    <img src="img/错@3x.png" alt="" />
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div>
+                                                    <img src="img/勾(2)@3x.png" alt="" />
+                                                    <span>软件定制</span>
+                                                    <img src="img/软件定制(1)拷贝@3x.png" alt="" />
+                                                    <span>软件定制</span>
+                                                    <img src="img/错@3x.png" alt="" />
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div>
+                                                    <img src="img/勾(2)@3x.png" alt="" />
+                                                    <span>支付定制</span>
+                                                    <img src="img/支付拷贝@3x.png" alt="" />
+                                                    <span>支付定制</span>
+                                                    <img src="img/错@3x.png" alt="" />
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div>
+                                                    <img src="img/勾(2)@3x.png" alt="" />
+                                                    <span>数据安全</span>
+                                                    <img src="img/数据安全拷贝@3x.png" alt="" />
+                                                    <span>数据安全</span>
+                                                    <img src="img/错@3x.png" alt="" />
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div>
+                                                    <img src="img/勾(2)@3x.png" alt="" />
+                                                    <span>成本</span>
+                                                    <img src="img/成本拷贝@3x.png" alt="" />
+                                                    <span>成本</span>
+                                                    <img src="img/高拷贝@3x.png" alt="" />
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                             <div class="section3">
                                 <div>
