--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -573,82 +573,91 @@
                         </div>
                         <div class="section">
                             <div class="section1">
-                                <span><img src="img/4拷贝@3x.png" alt="" /></span>
+                                <span><img src="img/5拷贝@3x.png" alt="" /></span>
                                 <span>汽车充电-合作对象</span>
                             </div>
                             <div class="section2">
                                 <div class="section2Wrapper">
-                                    <div class="s2p1">
-                                        <div>对比图</div>
-                                        <ul>
-                                            <li>
-                                                <img src="img/云服务器(2)@3x.png" alt="" />
-                                                <span>橡树云</span>
-                                            </li>
-                                            <li>
-                                                <img src="img/矢量智能对象@3x.png" alt="" />
-                                                <span>私有部署</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="s2p2">
-                                        <ul>
-                                            <li>
-                                                <div>
-                                                    <img src="img/勾(2)@3x.png" alt="" />
-                                                    <span>自行采购服务器</span>
-                                                    <img src="img/服务器(1)拷贝@3x.png" alt="" />
-                                                    <span>自行采购服务器</span>
-                                                    <img src="img/错@3x.png" alt="" />
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <img src="img/勾(2)@3x.png" alt="" />
-                                                    <span>按量收费</span>
-                                                    <img src="img/总量拷贝@3x.png" alt="" />
-                                                    <span>按量收费</span>
-                                                    <img src="img/错@3x.png" alt="" />
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <img src="img/勾(2)@3x.png" alt="" />
-                                                    <span>软件定制</span>
-                                                    <img src="img/软件定制(1)拷贝@3x.png" alt="" />
-                                                    <span>软件定制</span>
-                                                    <img src="img/错@3x.png" alt="" />
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <img src="img/勾(2)@3x.png" alt="" />
-                                                    <span>支付定制</span>
-                                                    <img src="img/支付拷贝@3x.png" alt="" />
-                                                    <span>支付定制</span>
-                                                    <img src="img/错@3x.png" alt="" />
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <img src="img/勾(2)@3x.png" alt="" />
-                                                    <span>数据安全</span>
-                                                    <img src="img/数据安全拷贝@3x.png" alt="" />
-                                                    <span>数据安全</span>
-                                                    <img src="img/错@3x.png" alt="" />
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <img src="img/勾(2)@3x.png" alt="" />
-                                                    <span>成本</span>
-                                                    <img src="img/成本拷贝@3x.png" alt="" />
-                                                    <span>成本</span>
-                                                    <img src="img/高拷贝@3x.png" alt="" />
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                    <ul>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝3@3x.png" alt="" />
+                                                <span>充电桩厂家</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝4@3x.png" alt="" />
+                                                <span class="left3">汽车厂</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝5@3x.png" alt="" />
+                                                <span>充电运营商</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝6@3x.png" alt="" />
+                                                <span class="left6">停车场运营商</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝7@3x.png" alt="" />
+                                                <span class="left2">园区</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝8@3x.png" alt="" />
+                                                <span class="left2">厂区</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝9@3x.png" alt="" />
+                                                <span>小区</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝10@3x.png" alt="" />
+                                                <span class="left2">学校</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝11@3x.png" alt="" />
+                                                <span class="extra">
+                                                    私人购桩者
+                                                    <br />
+                                                    <small>(共享充电)</small>
+                                                </span>
+
+                                                <span></span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝12@3x.png" alt="" />
+                                                <span class="left3">加油站</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝13@3x.png" alt="" />
+                                                <span class="left3">充电站</span>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="liWrapper">
+                                                <img src="img/圆角矩形3拷贝14@3x.png" alt="" />
+                                                <span class="left2">其他</span>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                             <div class="section3">
