完成汽车充电

--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -25,19 +25,44 @@
                             </div>
                             <div class="section2">
                                 <div>
-                                    <span>汽车充电</span>
+                                    <span class="lv1">
+                                        汽车充电
+                                        <span class="lv2">
+                                            <img src="img/rightArrow.png" alt="" />
+                                        </span>
+                                    </span>
                                 </div>
                                 <div>
-                                    <span>电单车充电</span>
+                                    <span class="lv1">
+                                        电单车充电
+                                        <span class="lv2">
+                                            <img src="img/rightArrow.png" alt="" />
+                                        </span>
+                                    </span>
                                 </div>
                                 <div>
-                                    <span>共享电池</span>
+                                    <span class="lv1">
+                                        共享电池
+                                        <span class="lv2">
+                                            <img src="img/rightArrow.png" alt="" />
+                                        </span>
+                                    </span>
                                 </div>
                                 <div>
-                                    <span>智慧电力</span>
+                                    <span class="lv1">
+                                        智慧电力
+                                        <span class="lv2">
+                                            <img src="img/rightArrow.png" alt="" />
+                                        </span>
+                                    </span>
                                 </div>
                                 <div>
-                                    <span>能源遥测</span>
+                                    <span class="lv1">
+                                        能源遥测
+                                        <span class="lv2">
+                                            <img src="img/rightArrow.png" alt="" />
+                                        </span>
+                                    </span>
                                 </div>
                             </div>
                             <div class="section3">
@@ -52,8 +77,8 @@
                             </div>
                         </div>
                     </div>
-                </div>  -->
-                <!-- <div class="swiper-slide">
+                </div>
+                <div class="swiper-slide">
                     <div class="wrapper2">
                         <div class="header">
                             <div><span>×</span></div>
@@ -117,8 +142,8 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="swiper-slide">
+                </div>
+                <div class="swiper-slide">
                     <div class="wrapper3">
                         <div class="header">
                             <div><span>×</span></div>
@@ -193,7 +218,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div><img src="img/品牌定制拷贝@3x.png" alt="" /></div>
+                                        <div><img src="img/共享充电.png" alt="" /></div>
                                         <div>
                                             <span>共享充电</span>
                                             <span>一台桩也能拥有平台获取收益</span>
@@ -213,8 +238,8 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="swiper-slide">
+                </div>
+                <div class="swiper-slide">
                     <div class="wrapper4">
                         <div class="header">
                             <div><span>×</span></div>
@@ -309,7 +334,7 @@
                         </div>
                     </div>
                 </div> -->
-                <!-- <div class="swiper-slide">
+                <div class="swiper-slide">
                     <div class="wrapper5">
                         <div class="header">
                             <div><span>×</span></div>
@@ -327,22 +352,30 @@
                                     <span>橡树合伙人</span>
                                 </div>
                                 <div class="s2p3">
-                                    <div class="info1">代理</div>
+                                    <div class="info1">
+                                        <img src="img/代理@2x.png" alt="" />
+                                        <span>代理</span>
+                                    </div>
                                     <div class="line1"></div>
                                     <div class="line2"></div>
                                     <div class="line3">
                                         <div class="extraInfo">直采</div>
                                     </div>
-                                    <div class="info2">橡树云</div>
+                                    <div class="info2">
+                                        <img src="img/云服务@2x.png" alt="" />
+                                        <span>橡树云</span>
+                                    </div>
                                 </div>
                                 <div class="s2p4">
                                     <div class="info1"></div>
                                     <div class="line1"></div>
                                     <div class="line2"></div>
                                     <div class="line3"></div>
-                                    <div class="info2">私有部署</div>
+                                    <div class="info2">
+                                        <img src="img/代理@2x.png" alt="" />
+                                        <span>私有部署</span>
+                                    </div>
                                 </div>
-                                <div class="s2p5"></div>
                             </div>
                             <div class="section3">
                                 <div class="section3Wrapper">
@@ -463,7 +496,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <!-- <div class="swiper-slide">
                     <div class="wrapper6">
                         <div class="header">
@@ -563,7 +596,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="swiper-slide">
                     <div class="wrapper7">
                         <div class="header">
@@ -672,7 +705,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
