--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -34,38 +34,46 @@
                                         </span>
                                     </div>
                                 </a>
-                                <div>
-                                    <span class="lv1">
-                                        电单车充电
-                                        <span class="lv2">
-                                            <img src="img/rightArrow.png" alt="" />
+                                <a href="/carCharging/carCharging.html">
+                                    <div>
+                                        <span class="lv1">
+                                            电单车充电
+                                            <span class="lv2">
+                                                <img src="img/rightArrow.png" alt="" />
+                                            </span>
                                         </span>
-                                    </span>
-                                </div>
-                                <div>
-                                    <span class="lv1">
-                                        共享电池
-                                        <span class="lv2">
-                                            <img src="img/rightArrow.png" alt="" />
+                                    </div>
+                                </a>
+                                <a href="/carCharging/carCharging.html">
+                                    <div>
+                                        <span class="lv1">
+                                            共享电池
+                                            <span class="lv2">
+                                                <img src="img/rightArrow.png" alt="" />
+                                            </span>
                                         </span>
-                                    </span>
-                                </div>
-                                <div>
-                                    <span class="lv1">
-                                        智慧电力
-                                        <span class="lv2">
-                                            <img src="img/rightArrow.png" alt="" />
+                                    </div>
+                                </a>
+                                <a href="/carCharging/carCharging.html">
+                                    <div>
+                                        <span class="lv1">
+                                            智慧电力
+                                            <span class="lv2">
+                                                <img src="img/rightArrow.png" alt="" />
+                                            </span>
                                         </span>
-                                    </span>
-                                </div>
-                                <div>
-                                    <span class="lv1">
-                                        能源遥测
-                                        <span class="lv2">
-                                            <img src="img/rightArrow.png" alt="" />
+                                    </div>
+                                </a>
+                                <a href="/carCharging/carCharging.html">
+                                    <div>
+                                        <span class="lv1">
+                                            能源遥测
+                                            <span class="lv2">
+                                                <img src="img/rightArrow.png" alt="" />
+                                            </span>
                                         </span>
-                                    </span>
-                                </div>
+                                    </div>
+                                </a>
                             </div>
                             <div class="section3">
                                 <div>
