删除主页箭头

--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -89,8 +89,8 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <!-- <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div> -->
             <div class="swiper-scrollbar"></div>
         </div>
         <script src="node_modules/swiper/swiper-bundle.min.js"></script>
