--- a/electricBicycleCharging/electricBicycleCharging.html
+++ b/electricBicycleCharging/electricBicycleCharging.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hans">
     <head>
         <meta charset="utf-8" />
-        <title>汽车充电</title>
+        <title>电单车充电</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
         <link rel="stylesheet" href="../node_modules/swiper/swiper-bundle.min.css" />
@@ -16,18 +16,19 @@
                     <div class="wrapper2">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
+                            <div><span>电单车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
                             <div class="section1">
+                                =
                                 <div class="navInfo">
                                     <span><img src="../img/1@3x.png" alt="" /></span>
-                                    <span>汽车充电-业务介绍</span>
+                                    <span>电单车充电-业务介绍</span>
                                 </div>
                                 <div class="detail">
                                     <span>
-                                        汽车充电业务提供了汽车充电的运营平台，支持汽车直流桩、交流桩、充电插座等设备的接入和运营，您可以自行购买充电桩，选好场地进行安装，即可快速运营，获取收益。
+                                        电单车充电业务提供了电单车充电的运营平台，支持充电站、智能插座、智能电表等设备的接入和运营，您可以自行购买充电桩，选好场地进行安装，即可快速运营，获取收益。
                                     </span>
                                 </div>
                             </div>
@@ -81,7 +82,7 @@
                     <div class="wrapper3">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
+                            <div><span>电单车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
@@ -90,7 +91,7 @@
                                     <span>
                                         <img src="../img/2拷贝@3x.png" alt="" />
                                     </span>
-                                    <span>汽车充电-特色功能</span>
+                                    <span>电单车充电-特色功能</span>
                                 </div>
                             </div>
                             <div class="section2">
@@ -174,16 +175,16 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="wrapper4">
+                    <div class="wrapper4" id="electricBicycleChargingWrapper4">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
+                            <div><span>电单车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
                             <div class="section1">
                                 <span><img src="../img/3拷贝@3x.png" alt="" /></span>
-                                <span>汽车充电-设备兼容列表</span>
+                                <span>电单车充电-设备兼容列表</span>
                             </div>
                             <div class="section2">
                                 <div class="section2Wrapper">
@@ -229,16 +230,6 @@
                                         <div class="content">
                                             <div class="line1">
                                                 <div>
-                                                    <img src="../img/微信图片_20210126221014拷贝@3x.png" alt="" />
-                                                    <span>盛弘</span>
-                                                </div>
-                                                <div>
-                                                    <img src="../img/微信图片_20210126221032拷贝@3x.png" alt="" />
-                                                    <span>华夏云联</span>
-                                                </div>
-                                            </div>
-                                            <div class="line2">
-                                                <div>
                                                     <img src="../img/微信图片_20210125164446拷贝@3x.png" alt="" />
                                                     <span>中恒电气</span>
                                                 </div>
@@ -272,13 +263,13 @@
                     <div class="wrapper5">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
+                            <div><span>电单车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
                             <div class="section1">
                                 <span><img src="../img/4拷贝@3x.png" alt="" /></span>
-                                <span>汽车充电-合作方式</span>
+                                <span>电单车充电-合作方式</span>
                             </div>
                             <div class="section2">
                                 <div class="s2p1">合作方式类别</div>
@@ -435,7 +426,7 @@
                     <div class="wrapper6">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
+                            <div><span>电单车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
@@ -548,16 +539,16 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="wrapper7">
+                    <div class="wrapper7" id="electricBicycleChargingWrapper7">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
+                            <div><span>电单车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
                             <div class="section1">
                                 <span><img src="../img/5拷贝@3x.png" alt="" /></span>
-                                <span>汽车充电-合作对象</span>
+                                <span>电单车充电-合作对象</span>
                             </div>
                             <div class="section2">
                                 <div class="section2Wrapper">
@@ -565,13 +556,13 @@
                                         <li>
                                             <div class="liWrapper">
                                                 <img src="../img/圆角矩形3拷贝3@3x.png" alt="" />
-                                                <span>充电桩厂家</span>
+                                                <span>充电站厂家</span>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="liWrapper">
                                                 <img src="../img/圆角矩形3拷贝4@3x.png" alt="" />
-                                                <span class="left3">汽车厂</span>
+                                                <span class="left6">智能插座厂家</span>
                                             </div>
                                         </li>
                                         <li>
@@ -583,7 +574,7 @@
                                         <li>
                                             <div class="liWrapper">
                                                 <img src="../img/圆角矩形3拷贝6@3x.png" alt="" />
-                                                <span class="left6">停车场运营商</span>
+                                                <span class="left6">电单车制造商</span>
                                             </div>
                                         </li>
                                         <li>
@@ -601,7 +592,7 @@
                                         <li>
                                             <div class="liWrapper">
                                                 <img src="../img/圆角矩形3拷贝9@3x.png" alt="" />
-                                                <span>小区</span>
+                                                <span class="left2">小区</span>
                                             </div>
                                         </li>
                                         <li>
@@ -610,34 +601,17 @@
                                                 <span class="left2">学校</span>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="liWrapper">
-                                                <img src="../img/圆角矩形3拷贝11@3x.png" alt="" />
-                                                <span class="extra">
-                                                    私人购桩者
-                                                    <br />
-                                                    <small>(共享充电)</small>
-                                                </span>
 
-                                                <span></span>
-                                            </div>
-                                        </li>
                                         <li>
                                             <div class="liWrapper">
                                                 <img src="../img/圆角矩形3拷贝12@3x.png" alt="" />
-                                                <span class="left3">加油站</span>
+                                                <span>车棚运营商</span>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="liWrapper">
                                                 <img src="../img/圆角矩形3拷贝13@3x.png" alt="" />
                                                 <span class="left3">充电站</span>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="liWrapper">
-                                                <img src="../img/圆角矩形3拷贝14@3x.png" alt="" />
-                                                <span class="left2">其他</span>
                                             </div>
                                         </li>
                                     </ul>
